--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,11 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+graphql_client = "0.9"
+serde = "1"
+anyhow = "1"
+reqwest = "0.9"
+csv = "1"
 
 [dependencies.clap]
 version = "2"
