--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2018"
 
 [dependencies]
 graphql_client = "0.9"
-serde = "1"
+serde = {version = "1", features = ["derive"]}
+serde_json = "1"
 anyhow = "1"
 reqwest = "0.9"
 csv = "1"
