--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,9 @@ serde_json = "1"
 anyhow = "1"
 reqwest = "0.9"
 csv = "1"
+thiserror = "1"
+strum = "0.18"
+strum_macros = "0.18"
 
 [dependencies.clap]
 version = "2"
