--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,8 @@ csv = "1"
 thiserror = "1"
 strum = "0.18"
 strum_macros = "0.18"
-atty = "*"
-same-file = "*"
+atty = "0.2"
+same-file = "1"
 
 [dependencies.clap]
 version = "2"
