--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ strum = "0.18"
 strum_macros = "0.18"
 atty = "0.2"
 same-file = "1"
-winapi_util = "0.1.4"
+winapi-util = "0.1.4"
 
 [dependencies.clap]
 version = "2"
