--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "gnverify"
 description = "Takes a scientific name or a list of names and verifies them against a variety of biodiversity Data Sources"
 readme = "README.md"
+documentation = "https://docs.rs/gnverify/"
+homepage = "https://github.com/gnames/gnverify"
+repository = "https://github.com/gnames/gnverify"
 license = "MIT"
 version = "0.2.1"
 authors = ["Dmitry Mozzherin <dmozzherin@gmail.com>"]
